Fri Sep  8 10:00:12 2006  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/cookie.rb (WEBrick::Cookie.parse_set_cookies): new
	  method to parse multiple cookies per Set-Cookie header.
	  Thanks to Aaron Patterson <aaron_patterson at speakeasy.net>.
	  [ruby-core:08802]

Fri Sep  8 08:59:30 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub, win32/configure.bat win32/setup.mak: program
	  name transform.

Fri Sep  8 08:25:39 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb: suppress `assigning void value' warning.

Fri Sep  8 01:16:34 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (Init_Array): #to_s to be an alias to #inspect.
	  [ruby-dev:29520]

	* hash.c (Init_Hash): ditto.

	* lib/mkmf.rb (create_makefile): replace "print array" by
	  "print *array".

	* mkconfig.rb: ditto.

Thu Sep  7 21:02:56 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (nil_to_s): returns the empty string again.
	  [ruby-dev:29520]

Thu Sep  7 23:27:05 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (path_check_0, fpath_check): disable path check on cygwin.
	  [ruby-talk:213074]

Thu Sep  7 02:03:45 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* time.c (time_to_s): adopt new date format using digits
	  e.g. "2006-09-07 02:03:45 +9000".

Thu Sep  7 01:54:22 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (sym_equal): override.  check equivalence.

Wed Sep  6 13:25:04 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (symbols_i): need to initialize early-created symbols.
	  [ruby-dev:29496]

Wed Sep 06 12:05:19 2006  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/lib/kconv.rb (Kconv::toeuc): remove -m0 [ruby-dev:29505]

Tue Sep  5 22:06:43 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tcltklib.c: use rb_ary_new3() since RARRAY_LEN() is not l-value.

	* ext/tk/tkutil/tkutil.c: use RARRAY_PTR() and RARRAY_LEN() and etc.
	  fixed: [ruby-dev:29473]
