@@ -1,3 +1,11 @@
+Fri Sep  8 16:36:27 2006  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* ext/extmk.rb (extmake): follow Array#to_s.
+
+	* lib/mkmf.rb (create_makefile): ditto.
+
+	* win32/resource.rb: ditto.
+
 Fri Sep  8 10:00:12 2006  GOTOU Yuuzou  <gotoyuzo@notwork.org>
 
 	* lib/webrick/cookie.rb (WEBrick::Cookie.parse_set_cookies): new
